# yaml-edit

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  DESIGN.md  README.md  TODO.md  debug_nested_mutation.rs  debug_test.rs
.github/workflows/: publish.yml  rust.yml
benches/: yaml_stress_tests.rs
examples/: README.md  advanced_document_stream_test.rs  anchors.rs  anchors_comprehensive.rs  anchors_example.rs  builder_example.rs  colon_in_array_test.rs  colon_test.rs  comment_test.rs  comprehensive_comment_test.rs  comprehensive_demo.rs  custom_schema.rs  custom_tags_example.rs  dash_comprehensive_test.rs  debug_anchor_tokens.rs  debug_binary_ast.rs  debug_items.rs  debug_json.rs  debug_midline_comments.rs  debug_parsing_issue.rs  debug_schema.rs  debug_sequence.rs  debug_tagged_scalar.rs  debug_tree.rs  debug_visitor.rs  directive_example.rs  document_stream_test.rs  edit_example.rs  editing_api.rs  editing_concept.rs  enhanced_coercion.rs  error_recovery.rs  flow_comment_test.rs  hyphen_bug_fixed_demo.rs  hyphen_test.rs  line_test.rs  merge_keys_example.rs  multi_hyphen_test.rs  multiline_detailed_test.rs  multiline_test.rs  (+31 more)
fuzz/: Cargo.toml
fuzz/fuzz_targets/: edit_yaml.rs  multi_document.rs  parse_yaml.rs
src/: anchor_resolution.rs  as_yaml.rs  builder.rs  custom_tags.rs  debug.rs  error.rs  error_recovery.rs  lex.rs  lib.rs  main.rs  mapping_view.rs  mutation.rs  parse.rs  path.rs  scalar.rs  schema.rs  tagged_collections.rs  test_utils.rs  validator.rs  value.rs  visitor.rs  yaml.rs
src/nodes/: alias_node.rs  comment.rs  directive.rs  document.rs  mapping.rs  mod.rs  scalar_node.rs  sequence.rs  tagged_node.rs
tests/: additional_edge_cases_test.rs  anchor_alias_edge_cases_test.rs  block_scalar_test.rs  bom_handling_test.rs  complex_keys.rs  comprehensive_error_recovery.rs  comprehensive_fixes_test.rs  comprehensive_insertion_tests.rs  custom_tags_doc_examples.rs  debug_editing.rs  debug_indent.rs  debug_mutation.rs  debug_nested.rs  debug_structure.rs  document_api_test.rs  duplicate_key_handling.rs  error_recovery_test.rs  error_recovery_tests.rs  error_type_tests.rs  flow_collection_edge_cases_test.rs  flow_comments_test.rs  fuzzing_test.rs  indentation_parsing_test.rs  insert_after_bug_test.rs  insert_index_tests.rs  invalid_yaml_handling.rs  json_compatibility_test.rs  mapping_operations_test.rs  mapping_with_blank_lines_test.rs  multi_key_parsing_test.rs  mutation_edge_cases_test.rs  mutation_tests.rs  nested_mutation_test.rs  number_formats_integration.rs  parser_stress_test.rs  parsing_bugs.rs  path_access_test.rs.disabled  regression_prevention_test.rs  sequence_operations_test.rs  set_tests.rs  (+10 more)
yaml-lsp/: Cargo.toml  TODO.md
yaml-lsp/src/: main.rs  position.rs  workspace.rs
