[package]
name = "yaml-edit"
version = "0.1.0"
edition = "2021"
authors = ["Jelmer Vernooĳ <jelmer@debian.org>"]
license = "Apache-2.0"
description = "A lossless parser and editor for YAML files"
keywords = ["yaml", "parser", "lossless", "edit"]
categories = ["parser-implementations"]

[dependencies]
rowan = "0.16"
regex = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "yaml_stress_tests"
harness = false
