[package]
name = "yaml-edit-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.yaml-edit]
path = ".."

[[bin]]
name = "parse_yaml"
path = "fuzz_targets/parse_yaml.rs"
test = false
doc = false
bench = false

[[bin]]
name = "edit_yaml"
path = "fuzz_targets/edit_yaml.rs"
test = false
doc = false
bench = false

[[bin]]
name = "multi_document"
path = "fuzz_targets/multi_document.rs"
test = false
doc = false
bench = false
